# RustRenderGL

./: .gitignore  Cargo.toml  README.md  bvh notes.md
assets/: summerforest.gltf
assets/models/: bvh_test_tiny.gltf  primitives.gltf
assets/shaders/: fbo.frag  fbo.vert  line.frag  line.vert  lit.frag  lit.vert  ray.comp  test.comp
src/: aabb.rs  bvh.rs  camera.rs  graphics.rs  helpers.rs  input.rs  light.rs  main.rs  material.rs  mesh.rs  raster.rs  ray.rs  raytrace_cpu.rs  raytrace_gpu.rs  resources.rs  shader.rs  sphere.rs  structs.rs  texture.rs
