[package]
name = "rust_render_gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
gl = "0.14.0"
glam = "0.24.0"
glfw = "0.51.0"
gltf = "1.1.0"
queues = "1.1.0"
stb_image = "0.2.5"

[build-dependencies]
copy_to_output = "2.0.0"
